--- a/styles/phone.css
+++ b/styles/phone.css
@@ -3,6 +3,9 @@
     margin: 0;
     padding: 0;
 }
+a {
+    cursor: pointer;
+}
 :root {
     --warmblack: #201E1C;
     --black: #282623;
@@ -28,7 +31,8 @@ header .header-image {
 }
 .main-profile-container {
     position: relative;
-    width: 180px;
+    min-width: 180px;
+    max-width: 400px;
     height: auto;
     margin: 0 auto;
     padding-top: 40px;
@@ -41,7 +45,7 @@ header .header-image {
     display: inline-block;
     width: 80px;
     height: 80px;
-    border-radius: 5rem;
+    border-radius: 10rem;
     background-image: url("../assets/imgs/profile_small.jpg");
     background-size: cover;
     background-position:center;
@@ -77,7 +81,7 @@ header .header-image {
 .main-projects-container {
     width: 100%;
     height: auto;
-    margin-top: 20px;
+    margin-top: 40px;
     margin-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
@@ -91,7 +95,7 @@ header .header-image {
 }
 .main-projects-container ul {
     list-style: none;
-    padding-top: 20px;
+    padding-top: 40px;
 }
 .main-projects-container ul li {
     width: auto;
@@ -100,7 +104,7 @@ header .header-image {
     font-size: 1.2rem;
     font-weight: 300;
     line-height: 1.6rem;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 .main-projects-container ul a {
     text-decoration: none;
